fix: ajustes para despliegue en Render (PORT dinámico y clave env)

--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Erik Alejandro Lopez",
   "license": "ISC",
   "description": "Servidor Express para manejo de usuarios Firebase",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "firebase-admin": "^13.3.0"
-  }
+    "firebase-admin": "^13.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erik210282/DaehanShippingBackend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/erik210282/DaehanShippingBackend/issues"
+  },
+  "homepage": "https://github.com/erik210282/DaehanShippingBackend#readme"
 }
