--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "Servidor Express para manejo de usuarios Firebase",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
